--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,6 +47,7 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/account, roles: ROLE_USER }
+        - { path: /, roles: PUBLIC_ACCESS }
         
 when@test:
     security:
