--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=0bf69a06bcb68bcd53e71cded639aba5
 ###< symfony/framework-bundle ###
 
@@ -25,7 +25,7 @@ APP_SECRET=0bf69a06bcb68bcd53e71cded639aba5
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 #DATABASE_URL="mysql://root:Root@127.0.0.1:3306/restaurant?&charset=utf8mb4"
-#DATABASE_URL="mysql://ku5o4g5xm12g60fc:m5fov637ibp0yj7j@pei17y9c5bpuh987.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/w38z7qodtk9s70r1"
+DATABASE_URL="mysql://ku5o4g5xm12g60fc:m5fov637ibp0yj7j@pei17y9c5bpuh987.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/w38z7qodtk9s70r1"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
