--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+PP_ENV=prod
 APP_SECRET=0bf69a06bcb68bcd53e71cded639aba5
 ###< symfony/framework-bundle ###
 
@@ -38,10 +38,11 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # .env
-MAILER_DSN=gmail+smtp://USERNAME:APP-PASSWORD@default
+MAILER_DSN=mailjet+smtp://ACCESS_KEY:SECRET_KEY@default
 ###< symfony/mailer ###
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
 MAILER_DSN=gmail+smtp://USERNAME:APP-PASSWORD@default
 ###< symfony/google-mailer ###
+MAILER_DSN=sendgrid://KEY@default
