--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-PP_ENV=prod
+PP_ENV=dev
 APP_SECRET=0bf69a06bcb68bcd53e71cded639aba5
 ###< symfony/framework-bundle ###
 
